fix: scroll dropdown options when too long in modal

--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -37,7 +37,6 @@
       box-shadow: var(--noora-border-heavy);
       border-radius: var(--noora-radius-2xlarge);
       background: var(--noora-surface-background-primary);
-      overflow: hidden;
 
       & > [data-part="body"] {
         padding: var(--noora-spacing-2) var(--noora-spacing-7);
